examples/typechecking/effects.an
effect Log =
    log: fn String -> Unit

effect Use a =
    get: fn Unit -> a
    set: fn a -> Unit

// `log` is handled here; `set` (from a different effect) escapes
handle_basic (): Unit can (Use String) =
    handler h for log v -> set v in
    log "test1"

use_resume () =
    handler h for
      | get () -> resume 3i32
      | set _ -> resume ()
    in ()

does_use (x: I32): Unit can (Use I32) =
    y: I32 = get ()
    set (y + x)

// Ensure a function with unhandled effects errors
pure_fn (): Unit pure =
    log "foo"

// main must always handle all non-primitive effects
main () =
    log "foo"

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// type Log =
//     log: fn String -> Unit
// 
// type Use a =
//     get: fn Unit -> a
//     set: fn a -> Unit
// 
// (handle_basic: fn Unit -> Unit can (Use String)) () : Unit can Use String =
//     handler (h: <Log>) for
//     | (log: fn String -> Unit can Log) (v: String) -> fn (v: String) (resume: fn Unit [Ptr] -> Unit pure) -> (set: fn String -> Unit can (Use String)) (v: String)
//     in fn () -> (log: fn String -> Unit can Log) "test1"
// 
// (use_resume: fn Unit -> Unit) () =
//     handler (h: <(Use I32)>) for
//     | (get: fn Unit -> I32 can (Use I32)) () -> fn () (resume: fn I32 [Ptr] -> Unit pure) -> (resume: fn I32 [Ptr] -> Unit pure) 3_I32
//     | (set: fn I32 -> Unit can (Use I32)) (_: I32) -> fn (_: I32) (resume: fn Unit [Ptr] -> Unit pure) -> (resume: fn Unit [Ptr] -> Unit pure) ()
//     in fn () -> ()
// 
// (does_use: fn I32 -> Unit can (Use I32)) ((x: I32)) : Unit can Use I32 =
//     (y: I32) = (get: fn Unit -> I32 can (Use I32)) ()
//     (set: fn I32 -> Unit can (Use I32)) ((+: fn I32 I32 {Add I32} [Ptr Unit] -> I32 pure) (y: I32) (x: I32) {(add_i32: Add I32)})
// 
// (pure_fn: fn Unit -> Unit pure) () : Unit pure =
//     (log: fn String -> Unit can Log) "foo"
// 
// (main: fn Unit -> Unit can Log, _) () =
//     (log: fn String -> Unit can Log) "foo"

// expected stderr:
// examples/typechecking/effects.an:25:5
// 24 | pure_fn (): Unit pure =
// 25 |     log "foo"	// error: This can perform <Log, _> but only <> is allowed here
//    |     ^^^
// 
// examples/typechecking/effects.an:28:1
// 27 | // main must always handle all non-primitive effects
//    | // error: main here has type fn Unit -> Unit can Log, _ but it should always have type fn Unit -> Unit pure
// 28 | main () =
//    | ^^^^
// 29 |     log "foo"
// 
// Found 2 errors and 0 warnings

